documenting spec route with swagger
